--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "@neftx/generic-form",
   "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neftx/generic-form.git"
+  },
+  "bugs": {
+    "url" : "https://github.com/neftx/generic-form/issues"
+  },
+  "homepage": "https://github.com/neftx/generic-form",
   "peerDependencies": {
     "@angular/common": "^11.2.7",
     "@angular/core": "^11.2.7",
